Update contact info

--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
           <a
             href="#join"
             class="btn btn-success px-5 py-2 rounded-pill fw-semibold"
-            >Contribute a Story</a
+            >Share Your Story</a
           >
         </div>
       </div>
@@ -1125,7 +1125,7 @@
                   type="text"
                   class="form-control"
                   id="name"
-                  placeholder="e.g. Godwin Tusime"
+                  placeholder="Full Name"
                   required
                 />
               </div>
@@ -1215,15 +1215,14 @@
             <h5 class="fw-semibold">We're happy to hear from you!</h5>
             <p class="mb-1">
               <i class="bi bi-envelope-fill me-2 text-success"></i>
-              abakonzo.usa@info.com
+              abakonzointheus@info.com
             </p>
             <p class="mb-1">
-              <i class="bi bi-telephone-fill me-2 text-success"></i> +1 (123)
-              456-7890
+              <i class="bi bi-telephone-fill me-2 text-success"></i> +1 (669)
+              216-9519
             </p>
             <p>
-              <i class="bi bi-geo-alt-fill me-2 text-success"></i> USA-based
-              chapter, national outreach
+              <i class="bi bi-geo-alt-fill me-2 text-success"></i> North America
             </p>
           </div>
 
@@ -1303,10 +1302,6 @@
             ><i class="bi bi-linkedin"></i
           ></a>
         </div>
-
-        <p class="text-muted small mb-0">
-          &copy; 2025 Omukonzo USA. All rights reserved.
-        </p>
       </div>
       <div class="text-center border-top pt-3 mt-4">
         <small id="copyright-year"></small>
