--- a/index.html
+++ b/index.html
@@ -2,27 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abakonzo USA</title>
-
-    <!-- Bootstrap, Icons, Fonts, AOS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css"
-      rel="stylesheet"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+    <!-- Page Title -->
+    <title>Abakonzo in the USA | Promoting Culture & Community</title>
+  
+    <!-- Description for SEO -->
+    <meta name="description" content="Official website of Abakonzo in the USA – promoting Bakonzo culture, unity, and networking in the diaspora.">
+    <meta name="keywords" content="Bakonzo, Kasese, Rwenzori, Culture, Uganda, USA, Community, Omukonzo, Diaspora, Networking">
+    <meta name="author" content="Abakonzo in the USA">
+  
+    <!-- Favicon -->
+    <link rel="icon" href="/images/abakonzo-logo.png" type="image/png" />
+  
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Abakonzo in the USA" />
+    <meta property="og:description" content="Promoting Bakonzo culture and building community in the diaspora." />
+    <meta property="og:image" content="https://abakonzointheus.org/images/og-image.jpg" /> <!-- Replace with actual URL -->
+    <meta property="og:url" content="https://abakonzointheus.org/" />
+    <meta property="og:type" content="website" />
+  
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Abakonzo in the USA" />
+    <meta name="twitter:description" content="Promoting Bakonzo culture and community." />
+    <meta name="twitter:image" content="https://abakonzointheus.org/images/og-image.jpg" /> <!-- Replace with actual URL -->
+  
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  
+    <!-- Lightbox CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
+  
+    <!-- AOS Animations -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/styles.css" />
 
     <style>
       body {
@@ -216,6 +239,13 @@
           column-count: 1;
         }
       }
+      * {
+  box-sizing: border-box;
+}
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
     </style>
   </head>
 
@@ -1419,6 +1449,12 @@
 
     expanded = !expanded;
   });
+  document.addEventListener("DOMContentLoaded", () => {
+      const lazyImages = document.querySelectorAll("img[loading='lazy']");
+      lazyImages.forEach(img => {
+        img.src = img.dataset.src || img.src;
+      });
+    });
     </script>
   </body>
 </html>
