--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ html, body {
                 alt="Profile"
               />
               <div class="card-body">
-                <h5 class="card-title fw-semibold">Godw Tusime</h5>
+                <h5 class="card-title fw-semibold">Godwin Tusime</h5>
                 <p class="card-text small">
                   Software Engineer - Ford, CEO-Olivwin, Chairman-Bakanzo
                   Community, USA
